Update text in index page

--- a/application/public/index.html
+++ b/application/public/index.html
@@ -29,7 +29,8 @@
 
 		<!-- HEADER AND TODO COUNT -->
 		<div class="jumbotron text-center">
-			<h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
+			<h1>Welcome to my Demo! <span class="label label-info">{{ todos.length }}</span></h1>
+			<h3>Daniel Pedroza</h3>
 		</div>
 
 		<!-- TODO LIST -->
